<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.liteng1220.gfgift.activity.MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/ll_guide"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/item_margin">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/item_margin"
            android:src="@drawable/tvb" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/item_margin"
            android:text="@string/index_label_motto"
            android:textColor="@color/grey"
            android:textSize="@dimen/font_size_small"/>

        <View
            android:id="@+id/view_line_1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/item_margin_32dp"
            android:layout_marginRight="@dimen/item_margin_32dp"
            android:background="@color/grey_light" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_margin"
            android:layout_marginBottom="@dimen/item_margin"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/index_label_guide"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_medium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/index_guide_search"
            android:textColor="@color/color_accent"
            android:textSize="@dimen/font_size_medium" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/item_margin"
            android:layout_marginTop="@dimen/item_margin"
            android:background="@color/grey_light" />

        <TextView
            android:id="@+id/tv_file_download_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/index_guide_download"
            android:textColor="@color/color_primary"
            android:textSize="@dimen/font_size_medium" />

        <TextView
            android:id="@+id/tv_bg_running_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_margin"
            android:text="@string/index_guide_bg_running_info"
            android:textColor="@color/grey"
            android:textSize="@dimen/font_size_small" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_search_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/item_margin">

            <TextView
                android:id="@+id/tv_keyword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_accent"
                android:textSize="@dimen/font_size_small" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/index_search_result"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_small" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_result_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>
